<resources>
    <string name="app_name">Mynt</string>


    <string name="mainAct_title">Tap to add a coin</string>
    <string name="mainAct_coin_add_button">Used to add coins</string>
    <string name="mainAct_search_button">Used to search for coins</string>
    <string name="mainAct_library_button">Used to navigate to the leaderboard</string>
    <string name="mainAct_leaderboard_image">Displays leaderboard world map</string>

    <string name="leaderboard_title">Leaderboard</string>

    <string name="library_user_icon">Used to navigate to Login</string>

    <string name="library_title">Library</string>
    <string name="library_option_coins">Coins</string>
    <string name="library_option_collections">Collections</string>
    <string name="library_option_goals">Goals</string>
    <string name="library_nav_icon">Displays Icon</string>
    <string name="library_recent_coins">Recent Coins</string>

    <string name="search_title">Search</string>
    <string name="search_value">Value</string>
    <string name="search_year">Year</string>
    <string name="search_coins">Coins</string>

    <string name="settings_title">Settings</string>
    <string name="settings_profile_title">Profile</string>
    <string name="settings_user_name_title">DisplayName</string>
    <string name="settings_log_out_button_text">LOG OUT</string>

    <string name="coins_title">Coins</string>
    <string name="all_coins_block_title">All Coins</string>
    <string name="coins_acquired_date">21 April, 17:36</string>
    <string name="coins_coin_name">Two Rand</string>
    <string name="coins_coin_year">2020</string>
    <string name="coins_coin_country">South Africa</string>
    <string name="coin_background">Displays Coin Background</string>
    <string name="coin_overlay">Used to hold coin info</string>
    <string name="coin_image">Displays coin</string>

    <string name="bottom_sheet_remove">Remove</string>
    <string name="bottom_sheet_share">Share</string>
    <string name="bottom_sheet_view">View</string>
    <string name="bottom_sheet_collection">Collection</string>


    <string name="collections_title">Collections</string>
    <string name="collections_name">20th Century</string>
    <string name="collections_create">Next</string>
    <string name="collections_amount_of_coins">9 coins</string>

    <string name="back_button">Used to navigate back to the previous view</string>
    <string name="block_title">Displays block title</string>
    <string name="share_button">Used to share data</string>
    <string name="goals_title">Set Goal</string>

    <string name="all_goals_title">All Goals</string>

    <string name="coin_details_information">Coin Information</string>
    <string name="coin_details_mintage">Mintage:</string>
    <string name="coin_details_variety">Variety:</string>
    <string name="coin_details_observe">Observe:</string>
    <string name="coin_details_reverse">Reverse:</string>
    <string name="coin_details_circulation">Circulation:</string>
    <string name="coin_details_type">Type:</string>
    <string name="coin_details_points">Points:</string>

    <string name="goal_button">Set</string>
    <string name="login_title">Login</string>
    <string name="login_icon">Login Icon</string>
    <string name="sign_up_icon">Sign Up Icon</string>
    <string name="login_description">Access all your coins in one place</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_button_text">LOGIN WITH EMAIL</string>

    <string name="register_title">Save your coins</string>
    <string name="sign_up_or">Or</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="sign_up_button">Used to sign up a user</string>
    <string name="login_button">Used to login a user</string>

    <string name="add_coin_title">Add Coin</string>
    <string name="value">Value</string>
    <string name="add">Add</string>
    <string name="date">Date Acquired</string>
    <string name="year">Coin Year</string>
    <string name="collection">Select Collection</string>
    <string name="variant">Variant</string>
    <string name="material">Material</string>
    <string name="alt_name">Alternate Name</string>
    <string name="mintage">Mintage</string>
    <string name="observe">Observe</string>
    <string name="reverse">Reverse</string>

    <string-array name="Collections">
        <item>20th Century</item>
        <item>Roaring 80s</item>
    </string-array>

    <string-array name="Material">
        <item>Bimetallic</item>
        <item>Silver</item>
        <item>Nickel-plated copper</item>
        <item>Nickel</item>
        <item>Bronze-plated Steel</item>
        <item>Copper-plated Steel</item>
        <item>Bronze</item>
        <item>Brass</item>
        <item>Aluminium-Bronze</item>
        <item>Gold</item>
        <item>Platinum</item>
    </string-array>

    <string-array name="Variants">
        <item>Proof</item>
        <item>Brilliant CW privy mark</item>
        <item>Brilliant Uncirculated</item>
    </string-array>

    <string-array name="Value">
        <item>Half Cent</item>
        <item>One Cent</item>
        <item>Two and a Half Cent</item>
        <item>Five Cent</item>
        <item>Ten Cent</item>
        <item>Twenty Cent</item>
        <item>Fifty Cent</item>
        <item>One Rand</item>
        <item>Two Rand</item>
        <item>Five Rand</item>
        <item>Fifty Rand</item>
        <item>Tenth Ounce</item>
        <item>Twentieth Ounce</item>
        <item>Quarter Ounce</item>
        <item>Fiftieth Ounce</item>
        <item>Half Ounce</item>
        <item>Ounce</item>
        <item>Two Ounce</item>
        <item>Five Ounce</item>
        <item>Kilo</item>
        <item>Penny</item>
        <item>Three Pence</item>
        <item>Six Pence</item>
        <item>Shilling</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>