<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">


    <ImageView
        android:id="@+id/coin_background_imageview"
        android:layout_width="160dp"
        android:layout_height="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/coin_background"
        app:srcCompat="@drawable/coin_background" />

    <ImageView
        android:id="@+id/coin_overlay_imageview"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginTop="148dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coin_library_overlay"
        android:contentDescription="@string/coin_overlay" />

    <ImageView
        android:id="@+id/current_coin_imageview"
        android:layout_width="110dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/coin_background_imageview"
        app:layout_constraintEnd_toEndOf="@+id/coin_background_imageview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/two_rand"
        android:contentDescription="@string/coin_image" />

    <TextView
        android:id="@+id/coin_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="192dp"
        android:text="@string/coins_coin_name"
        android:textColor="?colorSecondaryVariant"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coin_year_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="216dp"
        android:text="@string/coins_coin_year"
        android:textColor="?colorSecondaryVariant"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coin_country_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        android:textColor="?colorSecondaryVariant"
        android:layout_marginTop="260dp"
        android:text="@string/coins_coin_country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>