<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageview_coin_background"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/coin_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_coinDate"
        app:srcCompat="@drawable/img_coin_background" />

    <ImageView
        android:id="@+id/imageview_current_coin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/coin_image"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_coin_background"
        app:layout_constraintEnd_toEndOf="@+id/imageview_coin_background"
        app:layout_constraintStart_toStartOf="@+id/imageview_coin_background"
        app:layout_constraintTop_toTopOf="@+id/imageview_coin_background" />

    <TextView
        android:id="@+id/textview_coin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/coins_coin_name"
        android:textColor="?colorSecondaryVariant"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/imageview_coin_background"
        app:layout_constraintTop_toBottomOf="@+id/textview_coinDate" />

    <TextView
        android:id="@+id/textview_coin_country"
        android:layout_width="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:text="@string/coins_coin_country"
        android:textColor="?colorSecondaryVariant"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/imageview_coin_background"
        app:layout_constraintTop_toBottomOf="@+id/textview_coin_acquired_date" />

    <TextView
        android:id="@+id/textview_coin_acquired_date"
        android:layout_width="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_height="wrap_content"
        android:text="@string/coins_acquired_date"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageview_coin_background"
        app:layout_constraintTop_toBottomOf="@+id/textview_coin_year" />

    <TextView
        android:id="@+id/textview_coin_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/coins_coin_year"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageview_coin_background"
        app:layout_constraintTop_toBottomOf="@+id/textview_coin_name" />

    <TextView
        android:id="@+id/textview_coinDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TODAY"
        android:paddingBottom="20dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>